first commit on document

--- a/LMS__39/mylog/templates/student_dashboard.html
+++ b/LMS__39/mylog/templates/student_dashboard.html
@@ -90,7 +90,7 @@
                     <div class="card-body">
                         <h5 class="card-title">View</h5>
                         <p class="card-text">View all resources and details.</p>
-                        
+                        <a href="{% url 'view_all' %}" class="btn btn-primary">Go to View</a>
                     </div>
                 </div>
             </div>
