--- a/LMS__39/mylog/templates/teacher_dashboard.html
+++ b/LMS__39/mylog/templates/teacher_dashboard.html
@@ -90,7 +90,7 @@
                     <div class="card-body">
                         <h5 class="card-title">View</h5>
                         <p class="card-text">View all resources and details.</p>
-                        <a href="#" class="btn btn-primary">Go to View</a>
+                        <a href="{% url 'view_all' %}" class="btn btn-primary">Go to View</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Add</h5>
                         <p class="card-text">Add new resources and details.</p>
-                        <a href="#" class="btn btn-success">Go to Add</a>
+                        <a href="{% url 'add_content' %}" class="btn btn-success">Go to Add</a>
                     </div>
                 </div>  
             </div>
