first video commit

--- a/LMS__39/mylog/templates/view_all.html
+++ b/LMS__39/mylog/templates/view_all.html
@@ -60,7 +60,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <h5 class="mb-3">Videos</h5>
-                    <a href="#" class="btn btn-primary btn-custom">View Videos</a>
+                    <a href="{% url 'video_list' %}" class="btn btn-primary btn-custom">View Videos</a>
                 </div>
             </div>
             <div class="col-md-4">
