first quiz commit

--- a/LMS__39/mylog/templates/add_content.html
+++ b/LMS__39/mylog/templates/add_content.html
@@ -44,7 +44,7 @@
                         <div class="d-grid gap-3">
                             <a href="{% url 'upload_document' %}" class="btn btn-primary btn-lg">Add Documents</a>
                             <a href="{% url 'upload_videos' %}" class="btn btn-success btn-lg">Add Videos</a>
-                            <a href="#" class="btn btn-warning btn-lg text-white">Add Quiz</a>
+                            <a href="{% url 'create_quiz' %}" class="btn btn-warning btn-lg text-white">Add Quiz</a>
                         </div>
                     </div>
                 </div>
