--- a/LMS__39/mylog/templates/view_all.html
+++ b/LMS__39/mylog/templates/view_all.html
@@ -72,7 +72,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <h5 class="mb-3">Quizzes</h5>
-                    <a href="#" class="btn btn-warning btn-custom">View Quizzes</a>
+                    <a href="{% url 'quiz_list' %}" class="btn btn-warning btn-custom">View Quizzes</a>
                 </div>
             </div>
         </div>
